--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": " npx nodemon app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
