--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": " npx nodemon app.js"
-    "start": "node app.js"
+    "dev": " npx nodemon app.js",
+    "start": "node app.js",
   },
   "dependencies": {
     "cors": "^2.8.5",
