--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": " npx nodemon app.js",
-    "start": "node app.js",
+    "start": "node app.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "expo": "^49.0.21",
     "express": "^4.18.2",
     "pg": "^8.11.3"
   },
