changes for add the pg database

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PG_HOST="127.0.0.1"
-PG_USER=postgres
-PG_PASSWORD=gatanovia
+PG_HOST="dpg-cm4cl4un7f5s73buogvg-a"
+PG_USER=goncha
+PG_PASSWORD=zTwlJsOR6LvOkZqoEU79n4hR9kdw8tra
 PG_DATABASE=todo_tutorial
 PG_PORT=5432
